# yral-auth

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  flake.nix  fly.toml
.github/workflows/: build-check.yml  deploy.yml
client/: Cargo.toml
client/src/: consts.rs  error.rs  lib.rs  reqs.rs
ssr/: Cargo.toml  README.md  tailwind.config.js
ssr/src/: app.rs  consts.rs  extractors.rs  lib.rs  main.rs
ssr/src/api/: mod.rs
ssr/src/api/server_impl/: google.rs  mod.rs
ssr/src/auth_providers/: google.rs  mod.rs
ssr/src/page/: err.rs  google_redirect.rs  login.rs  mod.rs  root.rs
ssr/src/state/: mod.rs  server.rs
store/: Cargo.toml
store/src/: error.rs  lib.rs  redb_kv.rs  redis_kv.rs
types/: Cargo.toml
types/src/: error.rs  lib.rs  metadata.rs
