[package]
name = "yral-auth-store"
version = "0.1.0"
edition = "2021"

[dependencies]
redb = "2.0.0"
enum_dispatch = "0.3.12"
redis = { version = "0.25.2", features = ["tokio-rustls-comp", "aio", "ahash", "connection-manager", "keep-alive"], default-features = false }
bb8 = "0.8.3"
bb8-redis = "0.15.0"
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
