[package]
name = "yral-auth-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
candid.workspace = true 
thiserror.workspace = true
yral-identity = { workspace = true, default-features = false }
ic-agent = { workspace = true, default-features = false }
k256.workspace = true 
web-time.workspace = true
url.workspace = true
